fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ h6 {
 
 #hero {
   display: table;
-  width: 101%;
+  width: 100%;
   height: 100vh;
   /*background: url(../img/hstat-building.jpg) top center fixed;*/
   background-size: cover;
